--- a/arch/arm/configs/render_defconfig
+++ b/arch/arm/configs/render_defconfig
@@ -1,26 +1,48 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.0 Kernel Configuration
+# Linux/arm 3.4.x Kernel Configuration
 #
 #
 # Render Kernel for OPO-CAF!
 #
+#### Hotplug Options ####
+CONFIG_MSM_HOTPLUG=y
+CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
+CONFIG_INTELLI_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=y
+
+##### KEXEC #####
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
+
+#### File System ####
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
+CONFIG_EXFAT_FS=y
+CONFIG_F2FS_FS=y
+# CONFIG_F2FS_STAT_FS is not set
+CONFIG_F2FS_FS_XATTR=y
+# CONFIG_F2FS_FS_POSIX_ACL is not set
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+
+#### CPUFREQ ####
+CONFIG_MSM_LIMITER=y
+CONFIG_STATE_NOTIFIER=y
 
 ##### MISC #####
 # CONFIG_PM_SYNC_BEFORE_SUSPEND  is not set
-<<<<<<< HEAD
 CONFIG_STATE_NOTIFIER=y
-=======
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_CC_OPTIMIZE_MORE=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
-CONFIG_PVS_LEVEL_INTERFACE=y
-CONFIG_SPEED_LEVEL_INTERFACE=y
 CONFIG_ANDROID_BG_SCAN_MEM=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
 
 #### Added Governors ####
@@ -31,7 +53,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
->>>>>>> 9bb6ea9... cpufreq: Initial port of Lionheart governor
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 #### TCP Options ####
 CONFIG_TCP_CONG_ADVANCED=y
