--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -323,6 +323,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_MSM_HS=y
+CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_MSM=y
 CONFIG_MSM_ADSPRPC=y
 CONFIG_I2C=y
@@ -468,15 +469,15 @@ CONFIG_ASHMEM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_PRIMA_WLAN=y
-CONFIG_PRONTO_WLAN=y
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_TDLS=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
+# CONFIG_PRIMA_WLAN is not set
+# CONFIG_PRONTO_WLAN is not set
+# CONFIG_PRIMA_WLAN_LFR is not set
+# CONFIG_PRIMA_WLAN_OKC is not set
+# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
+# CONFIG_WLAN_FEATURE_11W is not set
+# CONFIG_QCOM_TDLS is not set
+# CONFIG_QCOM_VOWIFI_11R is not set
+# CONFIG_ENABLE_LINUX_REG is not set
 CONFIG_SPS=y
 CONFIG_USB_BAM=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
@@ -524,3 +525,13 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
+
+### MODULES ###
+CONFIG_KPROBES=y
+CONFIG_HAVE_KPROBES=y
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODVERSIONS=y
+CONFIG_IPV6=y
+CONFIG_NF_DEFRAG_IPV6=y
