--- a/arch/arm/configs/bacon_defconfig
+++ b/arch/arm/configs/bacon_defconfig
@@ -3144,21 +3144,15 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 #
 # Qualcomm Atheros Prima WLAN module
 #
-CONFIG_PRIMA_WLAN=y
-CONFIG_PRONTO_WLAN=y
-# CONFIG_PRIMA_WLAN_BTAMP is not set
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_TDLS=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
-
-#
-# Qualcomm MSM specific device drivers
-#
-# CONFIG_MSM_SSBI is not set
+# CONFIG_PRIMA_WLAN is not set
+# CONFIG_PRONTO_WLAN is not set
+# CONFIG_PRIMA_WLAN_LFR is not set
+# CONFIG_PRIMA_WLAN_OKC is not set
+# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
+# CONFIG_WLAN_FEATURE_11W is not set
+# CONFIG_QCOM_TDLS is not set
+# CONFIG_QCOM_VOWIFI_11R is not set
+# CONFIG_ENABLE_LINUX_REG is not set
 CONFIG_SPS=y
 CONFIG_USB_BAM=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
@@ -3562,3 +3556,13 @@ CONFIG_NLATTR=y
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
+
+### MODULES ###
+CONFIG_KPROBES=y
+CONFIG_HAVE_KPROBES=y
+CONFIG_MODULES=y
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODVERSIONS=y
+CONFIG_IPV6=y
+CONFIG_NF_DEFRAG_IPV6=y
