--- a/arch/arm/configs/render_defconfig
+++ b/arch/arm/configs/render_defconfig
@@ -22,6 +22,15 @@ CONFIG_TCP_CONG_HTCP=y
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 
+#### Schedulers ####
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_TRIPNDROID=y
 
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
