Defconfig: Enable CONFIG_STATE_NOTIFIER
Signed-off-by: Zachariah <zkennedy87@gmail.com>

--- a/arch/arm/configs/render_defconfig
+++ b/arch/arm/configs/render_defconfig
@@ -8,6 +8,7 @@
 
 ##### MISC #####
 # CONFIG_PM_SYNC_BEFORE_SUSPEND  is not set
+CONFIG_STATE_NOTIFIER=y
 
 #### TCP Options ####
 CONFIG_TCP_CONG_ADVANCED=y
