--- a/arch/arm/configs/render_defconfig
+++ b/arch/arm/configs/render_defconfig
@@ -5,10 +5,54 @@
 #
 # Render Kernel for OPO-CAF!
 #
+#### Hotplug Options ####
+CONFIG_MSM_HOTPLUG=y
+CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
+CONFIG_INTELLI_HOTPLUG=y
+CONFIG_BRICKED_HOTPLUG=y
+
+##### KEXEC #####
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
+
+#### File System ####
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
+CONFIG_EXFAT_FS=y
+#CONFIG_F2FS_FS=y
+# CONFIG_F2FS_STAT_FS is not set
+#CONFIG_F2FS_FS_XATTR=y
+# CONFIG_F2FS_FS_POSIX_ACL is not set
+#CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+
+#### CPUFREQ ####
+CONFIG_MSM_LIMITER=y
+CONFIG_STATE_NOTIFIER=y
 
 ##### MISC #####
 # CONFIG_PM_SYNC_BEFORE_SUSPEND  is not set
-CONFIG_STATE_NOTIFIER=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_CC_OPTIMIZE_MORE=y
+CONFIG_QUICK_WAKEUP=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
+CONFIG_ANDROID_BG_SCAN_MEM=y
+CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_ADRENO_IDLER=y
+
+#### Added Governors ####
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+# CONFIG_CPU_FREQ_GOV_SLIM is not set
+CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 #### TCP Options ####
 CONFIG_TCP_CONG_ADVANCED=y
@@ -693,7 +737,6 @@ CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
-# CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
 
@@ -719,7 +762,6 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_TEGRA is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
@@ -1272,7 +1314,6 @@ CONFIG_OF=y
 #
 # Device Tree and Open Firmware support
 #
-CONFIG_PROC_DEVICETREE=y
 # CONFIG_OF_SELFTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
@@ -2519,7 +2560,6 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_HDMI_PANEL is not set
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
@@ -3224,9 +3264,6 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_NTFS_FS=y
-# CONFIG_NTFS_DEBUG is not set
-# CONFIG_NTFS_RW is not set
 
 #
 # Pseudo filesystems
