--- a/arch/arm/configs/render_defconfig
+++ b/arch/arm/configs/render_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.x Kernel Configuration
+# Linux/arm 3.4.0 Kernel Configuration
 #
 #
 # Render Kernel for OPO-CAF!
@@ -35,7 +35,6 @@ CONFIG_STATE_NOTIFIER=y
 
 ##### MISC #####
 # CONFIG_PM_SYNC_BEFORE_SUSPEND  is not set
-CONFIG_STATE_NOTIFIER=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_CC_OPTIMIZE_MORE=y
@@ -47,7 +46,7 @@ CONFIG_ADRENO_IDLER=y
 
 #### Added Governors ####
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
-CONFIG_CPU_FREQ_GOV_SLIM=y
+# CONFIG_CPU_FREQ_GOV_SLIM is not set
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
@@ -738,7 +737,6 @@ CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
-# CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
 
@@ -764,7 +762,6 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_TEGRA is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
 # CONFIG_CPU_FREQ_GOV_SMARTMAX_ENRC2B is not set
@@ -1317,7 +1314,6 @@ CONFIG_OF=y
 #
 # Device Tree and Open Firmware support
 #
-CONFIG_PROC_DEVICETREE=y
 # CONFIG_OF_SELFTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
@@ -2564,7 +2560,6 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_HDMI_PANEL is not set
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
@@ -3269,9 +3264,6 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_NTFS_FS=y
-# CONFIG_NTFS_DEBUG is not set
-# CONFIG_NTFS_RW is not set
 
 #
 # Pseudo filesystems
